Updated .tmux.conf .vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,10 +45,14 @@ set -g mouse on
 
 # Colors optimized for One Dark. If you prefer One Light try changing both
 # pane border colors from 240 / 243 to 250 / 253 and reload with `r.
-set -g status-style fg=colour110
-set -g pane-border-style fg=colour240
-set -g pane-active-border-style fg=colour243
-set-window-option -g window-status-current-style fg=colour39
+
+# set -g status-style fg=colour110                                      # one 
+# set -g pane-border-style fg=colour240                                 # one
+# set-window-option -g window-status-current-style fg=colour39          # one
+
+set -g status-style fg=colour244                                        # gruvbox
+set -g pane-active-border-style fg=colour250                            # gruvbox
+set-window-option -g window-status-current-style fg=colour223           # gruvbox
 
 set -g status-left ''
 set -g status-left-length 0
