--- a/.config/.config/neofetch/config.conf
+++ b/.config/.config/neofetch/config.conf
@@ -22,7 +22,7 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
     info "Local IP" local_ip
-    prin "Weather" "$(curl 'wttr.in/Kuantan, Malaysia?0?q?t' | awk '/°(C|F)/ {printf $(NF-1) $(NF) " ("a")"} /,/ {a=$0}')"
+    prin "Weather" "$(curl "wttr.in/Kuantan, Malaysia?0mqT" | awk '/°(C|F)/ {printf $(NF-1) $(NF) " ("a")"} /,/ {a=$0}')"
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
