--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -747,7 +747,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="Red-Hat"
+ascii_distro="Debian"
 
 # Ascii Colors
 #
