Added set-theme 20-Mar-2212

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,8 +50,8 @@ set -g mouse on
 # set -g pane-border-style fg=colour240                                 # one
 # set-window-option -g window-status-current-style fg=colour39          # one
 
-set -g status-style fg=colour244                                        # gruvbox
-set -g pane-active-border-style fg=colour250                            # gruvbox
+set -g status-style fg=colour110
+set -g pane-active-border-style fg=colour243
 set-window-option -g window-status-current-style fg=colour223           # gruvbox
 
 set -g status-left ''
