:art: Add colorls alias & housekeeping

--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -1,6 +1,7 @@
 [automount]
 root = /
-options = "metadata"
+#options = "metadata"
+options="metadata,umask=0033"
 
 [network]
 generateResolvConf = true
