--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -10,19 +10,18 @@ print_info() {
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    #info "Theme" theme
-    #info "Icons" icons
+#    info "Resolution" resolution
+#    info "DE" de
+#    info "WM" wm
+#    info "WM Theme" wm_theme
+#    info "Theme" theme
+#    info "Icons" icons
     info "Terminal" term
-    info "Terminal Font" term_font
+#    info "Terminal Font" term_font
     info "CPU" cpu
-    info "GPU" gpu
+#    info "GPU" gpu
     info "Memory" memory
     info "Local IP" local_ip
-    prin "Weather" "$(curl "wttr.in/Kuantan, Malaysia?0?q?T" | awk '/°(C|F)/ {printf $(NF-1) $(NF) " ("a")"} /,/ {a=$0}')"
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
@@ -118,7 +117,19 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="off"
+memory_percent="on"
+
+# Change memory output unit.
+#
+# Default: 'mib'
+# Values:  'kib', 'mib', 'gib'
+# Flag:    --memory_unit
+#
+# Example:
+# kib  '1020928KiB / 7117824KiB'
+# mib  '1042MiB / 6951MiB'
+# gib: ' 0.98GiB / 6.79GiB'
+memory_unit="mib"
 
 
 # Packages
@@ -239,7 +250,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="on"
+cpu_temp="off"
 
 
 # GPU
@@ -352,10 +363,10 @@ public_ip_timeout=2
 
 # Show Desktop Environment version
 #
-# Default: 'off'
+# Default: 'on'
 # Values:  'on', 'off'
 # Flag:    --de_version
-de_version="off"
+de_version="on"
 
 
 # Disk
@@ -451,6 +462,8 @@ disk_percent="on"
 # mpd
 # muine
 # netease-cloud-music
+# olivia
+# playerctl
 # pogo
 # pragha
 # qmmp
@@ -460,6 +473,7 @@ disk_percent="on"
 # smplayer
 # spotify
 # strawberry
+# tauonmb
 # tomahawk
 # vlc
 # xmms2d
@@ -679,7 +693,7 @@ disk_display="off"
 #
 # Default:  'ascii'
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
-#           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
+#           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
 image_backend="ascii"
 
@@ -707,34 +721,34 @@ image_source="auto"
 # Default: 'auto'
 # Values:  'auto', 'distro_name'
 # Flag:    --ascii_distro
-# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, AOSC,
-#       Apricity, ArcoLinux, ArchBox, ARCHlabs, ArchStrike,
-#       XFerience, ArchMerge, Arch, Artix, Arya, Bedrock, Bitrig,
-#       BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
+# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, "AOSC OS",
+#       "AOSC OS/Retro", Apricity, ArcoLinux, ArchBox, ARCHlabs,
+#       ArchStrike, XFerience, ArchMerge, Arch, Artix, Arya, Bedrock,
+#       Bitrig, BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
 #       BunsenLabs, Calculate, Carbs, CentOS, Chakra, ChaletOS,
 #       Chapeau, Chrom*, Cleanjaro, ClearOS, Clear_Linux, Clover,
 #       Condres, Container_Linux, CRUX, Cucumber, Debian, Deepin,
-#       DesaOS, Devuan, DracOS, DragonFly, Drauger, Elementary,
+#       DesaOS, Devuan, DracOS, DarkOs, DragonFly, Drauger, Elementary,
 #       EndeavourOS, Endless, EuroLinux, Exherbo, Fedora, Feren, FreeBSD,
-#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Gentoo, Pentoo,
-#       gNewSense, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
+#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Garuda, Gentoo, Pentoo,
+#       gNewSense, GNOME, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
 #       Hyperbola, janus, Kali, KaOS, KDE_neon, Kibojoe, Kogaion,
 #       Korora, KSLinux, Kubuntu, LEDE, LFS, Linux_Lite,
 #       LMDE, Lubuntu, Lunar, macos, Mageia, MagpieOS, Mandriva,
 #       Manjaro, Maui, Mer, Minix, LinuxMint, MX_Linux, Namib,
 #       Neptune, NetBSD, Netrunner, Nitrux, NixOS, Nurunner,
-#       NuTyX, OBRevenge, OpenBSD, OpenIndiana, OpenMandriva,
-#       OpenWrt, osmc, Oracle, PacBSD, Parabola, Pardus, Parrot,
-#       Parsix, TrueOS, PCLinuxOS, Peppermint, popos, Porteus,
-#       PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix, Raspbian,
-#       Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan, Regata,
-#       Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific, Septor,
-#       SharkLinux, Siduction, Slackware, SliTaz, SmartOS, Solus,
-#       Source_Mage, Sparky, Star, SteamOS, SunOS, openSUSE_Leap,
-#       openSUSE_Tumbleweed, openSUSE, SwagArch, Tails, Trisquel,
-#       Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio, Ubuntu,
-#       Void, Obarun, windows10, Windows7, Xubuntu, Zorin, and IRIX
-#       have ascii logos
+#       NuTyX, OBRevenge, OpenBSD, openEuler, OpenIndiana, openmamba,
+#       OpenMandriva, OpenStage, OpenWrt, osmc, Oracle, OS Elbrus, PacBSD,
+#       Parabola, Pardus, Parrot, Parsix, TrueOS, PCLinuxOS, Peppermint,
+#       popos, Porteus, PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix,
+#       Raspbian, Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan,
+#       Regata, Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific,
+#       Septor, SereneLinux, SharkLinux, Siduction, Slackware, SliTaz,
+#       SmartOS, Solus, Source_Mage, Sparky, Star, SteamOS, SunOS,
+#       openSUSE_Leap, openSUSE_Tumbleweed, openSUSE, SwagArch, Tails,
+#       Trisquel, Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio,
+#       Ubuntu, Venom, Void, Obarun, windows10, Windows7, Xubuntu, Zorin,
+#       and IRIX have ascii logos
 # NOTE: Arch, Ubuntu, Redhat, and Dragonfly have 'old' logo variants.
 #       Use '{distro name}_old' to use the old logos.
 # NOTE: Ubuntu has flavor variants.
@@ -747,7 +761,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="Debian"
+ascii_distro="auto"
 
 # Ascii Colors
 #
