:wrench: Add generateResolConf = false

--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -1,7 +1,10 @@
+[boot]
+command="ip link set dev eth0 mtu 1350"
+
 [automount]
 root = /
 #options = "metadata"
 options="metadata,umask=0033"
 
 [network]
-generateResolvConf = true
+generateResolvConf = false
