:wrench: Add interop

--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -1,5 +1,5 @@
-[boot]
-command="ip link set dev eth0 mtu 1350"
+#[boot]
+#command="ip link set dev eth0 mtu 1350"
 
 [automount]
 root = /
@@ -8,3 +8,7 @@ options="metadata,umask=0033"
 
 [network]
 generateResolvConf = false
+
+[interop]
+enabled=true                       # enable launch of Windows binaries; default is true
+appendWindowsPath=false             # append Windows path to $PATH variable; default is true
