:art: Add umask fmask into automount option

--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -1,10 +1,7 @@
-#[boot]
-#command="ip link set dev eth0 mtu 1350"
-
 [automount]
+enabled = true
 root = /
-#options = "metadata"
-options="metadata,umask=0033"
+options="metadata,umask=22,fmask=11"
 
 [network]
 generateResolvConf = false
