:wrench: Add powerline-status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,7 +46,7 @@ set -g mouse on
 # Colors optimized for One Dark. If you prefer One Light try changing both
 # pane border colors from 240 / 243 to 250 / 253 and reload with `r.
 
-# set -g status-style fg=colour110                                      # one 
+# set -g status-style fg=colour110                                      # one
 # set -g pane-border-style fg=colour240                                 # one
 # set-window-option -g window-status-current-style fg=colour39          # one
 
@@ -103,3 +103,6 @@ set -g @resurrect-strategy-vim 'session'
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# Powerline status
+source "/home/scudzy/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
