:wrench: New config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,14 +1,33 @@
+[user]
+	email = <22201569+scudzy@users.noreply.github.com>
+	name = <scudzy>
 [core]
-	editor = vim
-
-[color "diff"]
-	whitespace = red reverse
-
+    pager = delta
+[interactive]
+    diffFilter = delta --color-only
+[delta]
+	plus-style = "syntax #012800"
+    minus-style = "syntax #340001"
+    syntax-theme = Monokai Extended
+    navigate = true
+    features = unobtrusive-line-numbers decorations
+    whitespace-error-style = 22 reverse
+[delta "unobtrusive-line-numbers"]
+    line-numbers = true
+    line-numbers-minus-style = "#444444"
+    line-numbers-zero-style = "#444444"
+    line-numbers-plus-style = "#444444"
+    line-numbers-left-format = "{nm:>4}┊"
+    line-numbers-right-format = "{np:>4}│"
+    line-numbers-left-style = blue
+    line-numbers-right-style = blue
+[delta "decorations"]
+    commit-decoration-style = bold yellow box ul
+    file-style = bold yellow ul
+    file-decoration-style = none
+    hunk-header-decoration-style = yellow box
 [include]
 	path = ~/.gitconfig.user
-[user]
-	name = scudzys
-	email = scudzy@icloud.com
 [credential "https://github.com"]
-	helper = 
+	helper =
 	helper = !/usr/bin/gh auth git-credential
