--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,132 @@
 apt-xapian-index==0.49
-attrs==21.2.0
-Automat==20.2.0
+attrs==19.3.0
+Automat==0.8.0
 backports.entry-points-selectable==1.1.0
-bcrypt==3.2.0
-beautifulsoup4==4.9.3
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
 blinker==1.4
-breezy==3.2.0
+breezy==3.0.2
 cached-property==1.5.2
 cairocffi==1.2.0
 CairoSVG==2.5.2
-certifi==2021.5.30
+certifi==2019.11.28
 cffi==1.14.5
-chardet==4.0.0
+chardet==3.0.4
 chrome-gnome-shell==0.0.0
-click==8.0.1
+Click==7.0
 cloud-init==21.2
 cmake==3.20.2
-colorama==0.4.4
+colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 crcmod==1.7
-cryptography==3.4.7
+cryptography==2.8
 cssselect2==0.4.1
 cupshelpers==1.0
 curljson==0.9.9
 CurrencyConverter==0.16.1
 dbus-python==1.2.16
-decorator==5.0.9
+decorator==4.4.2
 defer==1.0.6
 defusedxml==0.7.1
-Deprecated==1.2.12
+Deprecated==1.2.7
 distlib==0.3.2
-distro==1.5.0
-dulwich==0.20.23
+distro==1.4.0
+dulwich==0.19.15
 entrypoints==0.3
-fastimport==0.9.13
+fastimport==0.9.8
 filelock==3.0.12
 galternatives==1.0.6
-html5lib==1.1
-httplib2==0.19.1
-hyperlink==21.0.0
+html5lib==1.0.1
+httplib2==0.14.0
+hyperlink==19.0.0
 i3ipc==2.2.1
-importlib-metadata==4.5.0
-incremental==21.3.0
+importlib-metadata==1.5.0
+incremental==16.10.1
 jeepney==0.6.0
-Jinja2==3.0.1
-jsonpatch==1.32
-jsonpointer==2.1
+Jinja2==2.10.1
+jsonpatch==1.22
+jsonpointer==2.0
 jsonschema==3.2.0
+keyring==18.0.1
 language-selector==0.1
 launchpadlib==1.10.13
-lazr.restfulclient==0.14.3
-lazr.uri==1.0.5
-lxml==4.6.3
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lxml==4.5.0
 macaroonbakery==1.3.1
-Mako==1.1.4
-Markdown==3.3.4
-MarkupSafe==2.0.1
+Mako==1.1.0
+Markdown==3.1.1
+MarkupSafe==1.1.0
 mock==3.0.5
-more-itertools==8.8.0
-netifaces==0.11.0
-oauthlib==3.1.1
+more-itertools==4.2.0
+netifaces==0.10.4
+oauthlib==3.1.0
 olefile==0.46
-packaging==20.9
-paramiko==2.7.2
+packaging==20.3
+paramiko==2.6.0
 patiencediff==0.2.2
-pbr==5.6.0
-pexpect==4.8.0
-Pillow==8.2.0
+pbr==5.4.5
+pexpect==4.6.0
+Pillow==7.0.0
 pip-review==1.1.0
 platformdirs==2.1.0
 powerline-status==2.7
-protobuf==3.17.3
-psutil==5.8.0
+protobuf==3.6.1
+psutil==5.5.1
 ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.20.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycairo==1.16.2
 pycparser==2.20
-pycups==2.0.1
-pyenchant==3.2.0
-pygit2==1.6.0
-PyGithub==1.55
-Pygments==2.9.0
-PyGObject==3.40.1
-PyHamcrest==2.0.2
-PyJWT==2.1.0
+pycups==1.9.73
+pyenchant==2.0.0
+pygit2==1.0.3
+PyGithub==1.43.7
+Pygments==2.3.1
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
 pymacaroons==0.13.0
-PyNaCl==1.4.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-PyQt5==5.15.4
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
+PyQt5==5.14.1
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
 pyRFC3339==1.1
-pyrsistent==0.17.3
-pyserial==3.5
-pyte==0.8.0
+pyrsistent==0.15.5
+pyserial==3.4
+pyte==0.4.8
 python-apt==2.0.0+ubuntu0.20.4.5
 python-crontab==2.5.1
 python-dateutil==2.8.1
-python-debian==0.1.39
-python-gitlab==2.7.1
+python-debian===0.1.36ubuntu1
+python-gitlab==2.0.1
 python-gnupg==0.4.7
-python-hglib==2.6.2
+python-hglib==2.6.1
 python-magic==0.4.24
 python-xlib==0.30
-pytz==2021.1
+pytz==2019.3
 pyuv==1.4.0
 pyvoc==1.4.0
-pyxdg==0.27
-PyYAML==5.4.1
+pyxdg==0.26
+PyYAML==5.3.1
 QtPy==1.9.0
-reportlab==3.5.67
-requests==2.25.1
+reportlab==3.5.34
+requests==2.22.0
 requests-toolbelt==0.9.1
 requests-unixsocket==0.2.0
 s-tui==1.1.1
-SecretStorage==3.3.1
-service-identity==21.1.0
-simplejson==3.17.2
-sip==6.1.0
-six==1.16.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
+sip==4.19.21
+six==1.14.0
 sos==4.1
-soupsieve==2.2.1
-ssh-import-id==5.11
+soupsieve==1.9.5
+ssh-import-id==5.10
 swinlnk==0.1.4
 systemd-python==234
 termcolor==1.1.0
@@ -133,19 +134,18 @@ testresources==2.0.1
 thefuck==3.31
 tinycss2==1.1.0
 toml==0.10.2
-Twisted==21.2.0
-ubuntu-advantage-tools==27.0
+Twisted==18.9.0
 ubuntu-drivers-common==0.0.0
 ufw==0.36
-urllib3==1.26.5
+urllib3==1.25.8
 urwid==2.1.2
 virtualenv==20.6.0
-wadllib==1.3.5
+wadllib==1.3.3
 wcwidth==0.2.5
 webencodings==0.5.1
 winshell==0.6
-wrapt==1.12.1
+wrapt==1.11.2
 wsl-windows-toolbar==0.6.3
 xkit==0.0.0
-zipp==3.4.1
-zope.interface==5.4.0
+zipp==1.0.0
+zope.interface==4.7.1
