:heavy_plus_sign: Initialize Debian11 configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,9 +101,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # tmux-resurrect settings.
 set -g @resurrect-strategy-vim 'session'
 
+# Powerline status
+run-shell 'powerline-daemon -q'
+#source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
+source '/usr/share/powerline/bindings/tmux/powerline.conf'
+
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b '~/.tmux/plugins/tpm/tpm'
-
-# Powerline status
-run-shell "powerline-daemon -q"
-source "~/.local/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf"
