--- a/requirements.txt
+++ b/requirements.txt
@@ -1,151 +1,63 @@
-apt-xapian-index==0.49
-attrs==19.3.0
-Automat==0.8.0
-backports.entry-points-selectable==1.1.0
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
+attrs==21.2.0
 blinker==1.4
-breezy==3.0.2
-cached-property==1.5.2
-cairocffi==1.2.0
-CairoSVG==2.5.2
-certifi==2019.11.28
-cffi==1.14.5
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-Click==7.0
-cmake==3.20.2
-colorama==0.4.3
-command-not-found==0.3
+breezy==3.1.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.7
+colorama==0.4.4
 configobj==5.0.6
-constantly==15.1.0
-crcmod==1.7
-cryptography==2.8
-cssselect2==0.4.1
-cupshelpers==1.0
-curljson==0.9.9
-CurrencyConverter==0.16.1
+cryptography==3.3.2
+CurrencyConverter==0.16.5
 dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.7.1
-Deprecated==1.2.7
-distlib==0.3.2
-distro==1.4.0
-dulwich==0.19.15
-entrypoints==0.3
+decorator==5.1.0
+Deprecated==1.2.11
+distro==1.5.0
+distro-info==1.0
+docopt==0.6.2
+dulwich==0.20.15
 fastimport==0.9.8
-filelock==3.0.12
-galternatives==1.0.6
-html5lib==1.0.1
-httplib2==0.14.0
-hyperlink==19.0.0
+gpg===1.14.0-unknown
+hglib==2.6.1
+httplib2==0.18.1
 i3ipc==2.2.1
-importlib-metadata==1.5.0
-incremental==16.10.1
+idna==3.3
 jeepney==0.6.0
-Jinja2==2.10.1
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
+keyring==22.0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lxml==4.5.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.1.1
-MarkupSafe==1.1.0
-mock==3.0.5
-more-itertools==4.2.0
-netifaces==0.10.4
+lazr.uri==1.0.5
+mercurial==5.6.1
 oauthlib==3.1.0
-olefile==0.46
-packaging==20.3
-paramiko==2.6.0
-patiencediff==0.2.2
-pbr==5.4.5
-pexpect==4.6.0
-Pillow==7.0.0
-pip-review==1.1.0
-platformdirs==2.1.0
-powerline-status==2.7
-protobuf==3.6.1
-psutil==5.5.1
-ptyprocess==0.7.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycparser==2.20
-pycups==1.9.73
-pyenchant==2.0.0
-pygit2==1.0.3
+patiencediff==0.2.1
+Pillow==8.4.0
+powerline-status==2.8.1
+psutil==5.8.0
+pycparser==2.21
+pycurl==7.43.0.6
+pyenchant==3.2.2
+pygit2==1.7.0
 PyGithub==1.43.7
-Pygments==2.3.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
+PyGObject==3.38.0
 PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyparsing==2.4.6
-PyQt5==5.14.1
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pyserial==3.4
-pyte==0.4.8
-python-apt==2.0.0+ubuntu0.20.4.6
-python-crontab==2.5.1
+pyte==0.8.0
+python-apt==2.2.1
 python-dateutil==2.8.1
-python-debian===0.1.36ubuntu1
-python-gitlab==2.0.1
-python-gnupg==0.4.7
-python-hglib==2.6.1
-python-magic==0.4.24
-python-xlib==0.30
-pytz==2019.3
-pyuv==1.4.0
+python-gitlab==2.5.0
+python-xlib==0.31
 pyvoc==1.4.0
-pyxdg==0.26
+pyxattr==0.7.2
 PyYAML==5.3.1
-QtPy==1.9.0
-reportlab==3.5.34
-requests==2.22.0
-requests-toolbelt==0.9.1
-requests-unixsocket==0.2.0
-s-tui==1.1.1
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-sos==4.1
-soupsieve==1.9.5
-ssh-import-id==5.10
-swinlnk==0.1.4
-systemd-python==234
+requests==2.26.0
+SecretStorage==3.3.1
+simplejson==3.17.2
+six==1.16.0
 termcolor==1.1.0
-testresources==2.0.1
 thefuck==3.31
-tinycss2==1.1.0
-toml==0.10.2
-Twisted==18.9.0
-ubuntu-advantage-tools==27.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-urllib3==1.25.8
-urwid==2.1.2
-virtualenv==20.6.0
-wadllib==1.3.3
+unattended-upgrades==0.1
+urllib3==1.26.7
+vcstools==0.1.42
+wadllib==1.3.5
 wcwidth==0.2.5
-webencodings==0.5.1
-winshell==0.6
-wrapt==1.11.2
-wsl-windows-toolbar==0.6.3
-xkit==0.0.0
-zipp==1.0.0
-zope.interface==4.7.1
+wrapt==1.12.1
+youtube-dl==2021.6.6
