--- a/requirements.txt
+++ b/requirements.txt
@@ -30,9 +30,11 @@ lazr.uri==1.0.5
 mercurial==5.6.1
 oauthlib==3.1.0
 patiencediff==0.2.1
+pbr==5.8.0
 Pillow==8.4.0
 powerline-status==2.8.1
 psutil==5.8.0
+pycairo==1.16.2
 pycparser==2.21
 pycurl==7.43.0.6
 pyenchant==3.2.2
@@ -53,6 +55,7 @@ SecretStorage==3.3.1
 simplejson==3.17.2
 six==1.16.0
 termcolor==1.1.0
+testresources==2.0.1
 thefuck==3.31
 unattended-upgrades==0.1
 urllib3==1.26.7
