--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g history-limit 50000
 
 # Enable color support inside of tmux.
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+#set -ga terminal-overrides ",*256col*:Tc"
 
 # Ensure window titles get renamed automatically.
 setw -g automatic-rename
@@ -46,13 +46,13 @@ set -g mouse on
 # Colors optimized for One Dark. If you prefer One Light try changing both
 # pane border colors from 240 / 243 to 250 / 253 and reload with `r.
 
-# set -g status-style fg=colour110                                      # one
-# set -g pane-border-style fg=colour240                                 # one
-# set-window-option -g window-status-current-style fg=colour39          # one
+set -g status-style fg=colour110                                      # one
+set -g pane-border-style fg=colour240                                 # one
+set-window-option -g window-status-current-style fg=colour39          # one
 
-set -g status-style fg=colour110
-set -g pane-active-border-style fg=colour243
-set-window-option -g window-status-current-style fg=colour223           # gruvbox
+#set -g status-style fg=colour110
+#set -g pane-active-border-style fg=colour243
+#set-window-option -g window-status-current-style fg=colour223           # gruvbox
 
 set -g status-left ''
 set -g status-left-length 0
@@ -102,9 +102,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @resurrect-strategy-vim 'session'
 
 # Powerline status
-run-shell 'powerline-daemon -q'
+run-shell '/usr/bin/powerline-daemon -q'
 #source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
-source '/usr/share/powerline/bindings/tmux/powerline.conf'
+#source '/usr/share/powerline/bindings/tmux/powerline.conf'
+source /usr/share/powerline/bindings/tmux/powerline.conf
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b '~/.tmux/plugins/tpm/tpm'
