--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,80 @@
-attrs==21.2.0
+attrs==19.3.0
+Automat==0.8.0
 blinker==1.4
-breezy==3.2.1
-certifi==2021.10.8
-cffi==1.15.0
+certifi==2019.11.28
 chardet==3.0.4
-charset-normalizer==2.0.7
-colorama==0.4.4
+Click==7.0
+cloud-init==21.4
+colorama==0.4.3
+command-not-found==0.3
 configobj==5.0.6
-cryptography==3.4.8
-CurrencyConverter==0.16.5
-dbus-python==1.2.18
-decorator==5.1.0
-Deprecated==1.2.11
-distro==1.5.0
-distro-info==1.0
-docopt==0.6.2
-dulwich==0.20.15
-fastbencode==0.0.5
-fastimport==0.9.8
-gpg===1.16.0-unknown
-hglib==2.6.1
-httplib2==0.18.1
-i3ipc==2.2.1
-idna==2.6
-importlib-metadata==4.6.4
-jeepney==0.6.0
-keyring==22.0.1
+constantly==15.1.0
+crcmod==1.7
+cryptography==2.8
+CurrencyConverter==0.16.7
+dbus-python==1.2.16
+decorator==5.1.1
+distro==1.4.0
+distro-info===0.23ubuntu1
+entrypoints==0.3
+httplib2==0.14.0
+hyperlink==19.0.0
+idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+Jinja2==2.10.1
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
-lazr.uri==1.0.5
-mercurial==5.6.1
-more-itertools==8.10.0
+lazr.uri==1.0.3
+MarkupSafe==1.1.0
+more-itertools==4.2.0
+netifaces==0.10.4
 oauthlib==3.1.0
-patiencediff==0.2.1
 pbr==5.8.0
-Pillow==8.4.0
-powerline-status==2.8.2
-psutil==5.8.0
-pycairo==1.16.2
-pycparser==2.21
-pycurl==7.44.1
+pexpect==4.6.0
+powerline-gitstatus==1.3.1
+powerline-status==2.7
+psutil==5.5.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycairo==1.20.1
 pyenchant==3.2.2
-pygit2==1.7.0
-PyGithub==1.55
-PyGObject==3.42.0
+PyGObject==3.36.0
+PyHamcrest==1.9.0
 PyJWT==1.7.1
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyperclip==1.8.2
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyrsistent==0.15.5
+pyserial==3.4
 pyte==0.8.0
-python-apt==2.3.0+b1
-python-dateutil==2.8.1
-python-gitlab==2.5.0
-python-xlib==0.31
+python-apt==2.0.0+ubuntu0.20.4.6
+python-debian===0.1.36ubuntu1
 pyvoc==1.4.0
-pyxattr==0.7.2
 PyYAML==5.3.1
-requests==2.26.0
-requests-toolbelt==0.9.1
-SecretStorage==3.3.1
-simplejson==3.17.2
-six==1.16.0
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+sos==4.1
+ssh-import-id==5.10
+systemd-python==234
 termcolor==1.1.0
 testresources==2.0.1
 thefuck==3.32
+Twisted==18.9.0
+ubuntu-advantage-tools==27.5
+ufw==0.36
 unattended-upgrades==0.1
-upass==0.3.0
-urllib3==1.26.7
-urwid==2.1.2
-vcstools==0.1.42
-wadllib==1.3.5
+urllib3==1.25.8
+wadllib==1.3.3
 wcwidth==0.2.5
-wrapt==1.12.1
-youtube-dl==2021.12.17
 zipp==1.0.0
+zope.interface==4.7.1
