:art: Improve code

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,5 @@
 # -----------------------------------------------------------------------------
-# This config is targeted for tmux 3.0+ which is painless to install on
-# Ubuntu 20.04 LTS (official apt repo), Debian Buster (backports) and Arch.
+# This config is targeted for tmux 3.0+.
 #
 # Read the "Plugin Manager" section (bottom) before trying to use this config!
 # -----------------------------------------------------------------------------
@@ -27,8 +26,11 @@ set -g focus-events on
 set -g history-limit 50000
 
 # Enable color support inside of tmux.
-set -g default-terminal "screen-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
+# Send xterm compatible control arrow keys so they work with Vim.
+setw -g xterm-keys on
 
 # Ensure window titles get renamed automatically.
 setw -g automatic-rename
@@ -43,16 +45,11 @@ setw -g pane-base-index 1
 # Enable full mouse support.
 set -g mouse on
 
-# Colors optimized for One Dark. If you prefer One Light try changing both
-# pane border colors from 240 / 243 to 250 / 253 and reload with `r.
-
-set -g status-style fg=colour110                                      # one
-set -g pane-border-style fg=colour240                                 # one
-set-window-option -g window-status-current-style fg=colour39          # one
-
-#set -g status-style fg=colour110
-#set -g pane-active-border-style fg=colour243
-#set-window-option -g window-status-current-style fg=colour223           # gruvbox
+# Various colors.
+set -g status-style fg=colour244
+set -g window-status-current-style fg=colour222
+set -g pane-border-style fg=colour240
+set -g pane-active-border-style fg=colour243
 
 set -g status-left ''
 set -g status-left-length 0
@@ -60,8 +57,8 @@ set -g status-right ''
 set -g status-right-length 0
 
 # Display a clock on the bottom right of the status bar.
-#set -g status-right '%a %Y-%m-%d %H:%M'
-#set -g status-right-length 20
+set -g status-right '%a %Y-%m-%d %H:%M'
+set -g status-right-length 20
 
 # -----------------------------------------------------------------------------
 # Key bindings
@@ -87,7 +84,7 @@ bind-key -n M-Right select-pane -R
 
 # -----------------------------------------------------------------------------
 # Plugin Manager - https://github.com/tmux-plugins/tpm
-# In order to use the plugins below you need to install TPM and the plugins.
+# If you didn't use my dotfiles install script you'll need to:
 #   Step 1) git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 #   Step 2) Reload tmux if it's already started with `r
 #   Step 3) Launch tmux and hit `I (capital i) to fetch any plugins
@@ -98,14 +95,18 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# tmux-resurrect settings.
-set -g @resurrect-strategy-vim 'session'
+# shell zsh
+set-option -g default-shell '/bin/zsh'
 
-# Powerline status
-run-shell '/usr/bin/powerline-daemon -q'
-#source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
-#source '/usr/share/powerline/bindings/tmux/powerline.conf'
-source /usr/share/powerline/bindings/tmux/powerline.conf
+# tmux-powerline
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/tmux-powerline/powerline.sh right)"
+set-hook -g session-created 'run-shell "~/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b "~/.tmux/plugins/tpm/tpm"
