--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 attrs==19.3.0
 Automat==0.8.0
 blinker==1.4
+bottle==0.12.15
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -9,40 +10,50 @@ colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
-crcmod==1.7
 cryptography==2.8
 CurrencyConverter==0.16.7
+cycler==0.10.0
 dbus-python==1.2.16
 decorator==5.1.1
 distro==1.4.0
 distro-info===0.23ubuntu1
+docker==4.1.0
 entrypoints==0.3
+future==0.18.2
+Glances==3.1.3
 httplib2==0.14.0
 hyperlink==19.0.0
 idna==2.8
 importlib-metadata==1.5.0
 incremental==16.10.1
+influxdb==5.2.0
 Jinja2==2.10.1
 jsonpatch==1.22
 jsonpointer==2.0
 jsonschema==3.2.0
 keyring==18.0.1
+kiwisolver==1.0.1
 language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 MarkupSafe==1.1.0
+matplotlib==3.1.2
 more-itertools==4.2.0
 netifaces==0.10.4
+numpy==1.17.4
 oauthlib==3.1.0
+olefile==0.46
 pbr==5.8.0
 pexpect==4.6.0
-powerline-gitstatus==1.3.1
+Pillow==7.0.0
+ply==3.11
 powerline-status==2.7
 psutil==5.5.1
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycairo==1.20.1
+pycryptodomex==3.6.1
 pyenchant==3.2.2
 PyGObject==3.36.0
 PyHamcrest==1.9.0
@@ -50,11 +61,17 @@ PyJWT==1.7.1
 pymacaroons==0.13.0
 PyNaCl==1.3.0
 pyOpenSSL==19.0.0
+pyparsing==2.4.6
 pyrsistent==0.15.5
 pyserial==3.4
+pysmi==0.3.2
+pysnmp==4.4.6
+pystache==0.5.4
 pyte==0.8.0
 python-apt==2.0.0+ubuntu0.20.4.6
+python-dateutil==2.7.3
 python-debian===0.1.36ubuntu1
+pytz==2019.3
 pyvoc==1.4.0
 PyYAML==5.3.1
 requests==2.22.0
@@ -63,7 +80,7 @@ SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
-sos==4.1
+sos==4.2
 ssh-import-id==5.10
 systemd-python==234
 termcolor==1.1.0
@@ -76,5 +93,6 @@ unattended-upgrades==0.1
 urllib3==1.25.8
 wadllib==1.3.3
 wcwidth==0.2.5
+websocket-client==0.53.0
 zipp==1.0.0
 zope.interface==4.7.1
