:art: Enable tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,8 +60,8 @@ set -g status-right ''
 set -g status-right-length 0
 
 # Display a clock on the bottom right of the status bar.
-#set -g status-right '%a %Y-%m-%d %H:%M'
-#set -g status-right-length 20
+set -g status-right '%a %Y-%m-%d %H:%M'
+set -g status-right-length 20
 
 # -----------------------------------------------------------------------------
 # Key bindings
@@ -102,10 +102,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @resurrect-strategy-vim 'session'
 
 # Powerline status
-run-shell '/usr/bin/powerline-daemon -q'
+#run-shell '/usr/bin/powerline-daemon -q'
 #source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
 #source '/usr/share/powerline/bindings/tmux/powerline.conf'
-source /usr/share/powerline/bindings/tmux/powerline.conf
+#source /usr/share/powerline/bindings/tmux/powerline.conf
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b '~/.tmux/plugins/tpm/tpm'
