--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ charset-normalizer==2.0.10
 colorama==0.4.4
 CurrencyConverter==0.16.7
 idna==2.6
+libusb1==3.0.0
 powerline-status==2.7
 pyenchant==1.6.6
 pyvoc==1.4.0
 requests==2.27.1
+speedtest-cli==2.1.3
 termcolor==1.1.0
+typing==3.7.4.3
 urllib3==1.26.8
