--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
+contextlib2==21.6.0
 cryptography==2.8
 CurrencyConverter==0.16.7
 cycler==0.10.0
@@ -41,13 +42,16 @@ MarkupSafe==1.1.0
 matplotlib==3.1.2
 more-itertools==4.2.0
 netifaces==0.10.4
+nsenter==0.2
 numpy==1.17.4
 oauthlib==3.1.0
 olefile==0.46
+pathlib==1.0.1
 pbr==5.8.0
 pexpect==4.6.0
 Pillow==7.0.0
 ply==3.11
+powerline-gitstatus==1.3.1
 powerline-status==2.7
 psutil==5.5.1
 pyasn1==0.4.2
@@ -68,8 +72,10 @@ pysmi==0.3.2
 pysnmp==4.4.6
 pystache==0.5.4
 pyte==0.8.0
+python-apt==2.0.0+ubuntu0.20.4.7
 python-dateutil==2.7.3
 python-debian===0.1.36ubuntu1
+python-hosts==1.0.3
 pytz==2019.3
 pyvoc==1.4.0
 PyYAML==5.3.1
@@ -86,6 +92,7 @@ termcolor==1.1.0
 testresources==2.0.1
 thefuck==3.32
 Twisted==18.9.0
+ubuntu-advantage-tools==27.6
 ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.25.8
