:wrench: Update python module list

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,21 @@
-Brlapi==0.8.2
 certifi==2021.10.8
-chardet==4.0.0
 charset-normalizer==2.0.12
 colorama==0.4.4
-cupshelpers==1.0
-CurrencyConverter==0.16.11
+CurrencyConverter==0.16.12
 dbus-python==1.2.16
 decorator==5.1.1
-distro-info==1.0
-feedparser==5.2.1
 idna==3.3
-louis==3.16.0
-musicbrainzngs==0.7.1
-mutagen==1.45.1
 powerline-status==2.7
-psutil==5.9.0
-pycairo==1.16.2
-pycups==2.0.1
-pyenchant==3.2.2
-pyinotify==0.9.6
+psutil==5.8.0
+pycurl==7.43.0.6
+pyenchant==3.2.0
+PyGObject==3.38.0
 pyte==0.8.1
 python-apt==2.2.1
 pyvoc==1.4.0
-pyxdg==0.27
-quodlibet==4.3.0
 requests==2.27.1
 six==1.16.0
 termcolor==1.1.0
 thefuck==3.32
-unattended-upgrades==0.1
 urllib3==1.26.9
 wcwidth==0.2.5
-xdg==5
