--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,17 @@ charset-normalizer==2.0.12
 colorama==0.4.4
 CurrencyConverter==0.16.12
 decorator==5.1.1
-idna==2.10
+defusedxml==0.7.1
+future==0.18.2
+Glances==3.2.7
+idna==2.6
+packaging==21.3
 pkgconfig==1.5.1
 powerline-status==2.7
 psutil==5.8.0
 pycairo==1.16.2
 pyenchant==3.2.0
+pyparsing==3.0.9
 pyte==0.8.1
 pyvoc==1.4.0
 requests==2.25.1
