--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-certifi==2020.6.20
-chardet==4.0.0
-charset-normalizer==2.0.12
-colorama==0.4.4
-CurrencyConverter==0.16.12
+certifi==2022.6.15
+chardet==5.0.0
+charset-normalizer==2.1.0
+colorama==0.4.5
+CurrencyConverter==0.17
 decorator==5.1.1
 defusedxml==0.7.1
 future==0.18.2
 Glances==3.2.7
 idna==2.6
 packaging==21.3
-pkgconfig==1.5.1
-powerline-status==2.7
+pip-review==1.1.1
+pkgconfig==1.5.5
+powerline-status==2.8.1
 psutil==5.8.0
 pycairo==1.16.2
 pyenchant==3.2.0
 pyparsing==3.0.9
 pyte==0.8.1
 pyvoc==1.4.0
-requests==2.25.1
+requests==2.28.1
 six==1.16.0
 termcolor==1.1.0
 thefuck==3.32
-urllib3==1.26.5
+urllib3==1.26.11
 wcwidth==0.2.5
