:heavy_plus_sign: Update .config folder

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -11,17 +11,16 @@ print_info() {
     info "Packages" packages
     info "Shell" shell
     info "Resolution" resolution
-#    info "DE" de
-#    info "WM" wm
-#    info "WM Theme" wm_theme
-#    info "Theme" theme
-#    info "Icons" icons
+    info "DE" de
+    info "WM" wm
+    info "WM Theme" wm_theme
+    info "Theme" theme
+    info "Icons" icons
     info "Terminal" term
-#    info "Terminal Font" term_font
+    info "Terminal Font" term_font
     info "CPU" cpu
-#    info "GPU" gpu
+    info "GPU" gpu
     info "Memory" memory
-    info "Local IP" local_ip
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
@@ -117,7 +116,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="on"
+memory_percent="off"
 
 # Change memory output unit.
 #
