--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 argcomplete==2.0.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
-certifi==2022.6.15
+certifi==2022.9.24
 chardet==5.0.0
 charset-normalizer==2.1.1
 colorama==0.4.5
@@ -9,6 +9,7 @@ commonmark==0.9.1
 CurrencyConverter==0.17.1
 decorator==5.1.1
 defusedxml==0.7.1
+docopt==0.6.2
 future==0.18.2
 Glances==3.2.7
 idna==2.6
@@ -32,7 +33,7 @@ rich==12.5.1
 schedule==1.1.0
 six==1.16.0
 soupsieve==2.3.2.post1
-termcolor==1.1.0
+termcolor==2.0.1
 thefuck==3.32
 toml==0.10.2
 tqdm==4.64.1
