:hammer: Replace existing file after upgrade wsl2

--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -5,7 +5,7 @@ options="metadata,umask=22,fmask=11"
 
 [network]
 generateHosts = true			# false for empty hosts file
-generateResolvConf = true		# false to manually add nameserver
+generateResolvConf = false		# false to manually add nameserver
 
 [interop]
 enabled=true                       	# enable launch of Windows binaries; default is true
