:wrench: Add new config

--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -5,11 +5,17 @@ systemd=true
 enabled = true
 root = /
 options="metadata,umask=22,fmask=11"
+# DrvFs-specific options can be specified.
+# options = "metadata,uid=1003,gid=1003,umask=077,fmask=11,case=off"
 
 [network]
+# hostname = deb11
 generateHosts = true			# false for empty hosts file
 generateResolvConf = false		# false to manually add nameserver
 
 [interop]
 enabled=true                       	# enable launch of Windows binaries; default is true
 appendWindowsPath=false             	# append Windows path to $PATH variable; default is true
+
+[user]
+default = scudzy
