--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,122 @@
 argcomplete==2.0.0
+async-generator==1.10
+attrs==22.2.0
+Automat==22.10.0
+bcrypt==4.0.1
 beautifulsoup4==4.11.1
+bottle==0.12.23
+Brlapi==0.8.2
 bs4==0.0.1
-certifi==2022.9.24
-chardet==5.0.0
+cached-property==1.5.2
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
 charset-normalizer==2.1.1
-colorama==0.4.5
+click==8.1.3
+colorama==0.4.6
 commonmark==0.9.1
-CurrencyConverter==0.17.1
+constantly==15.1.0
+cryptography==39.0.0
+cupshelpers==1.0
+CurrencyConverter==0.17.4
+dbus-python==1.2.16
 decorator==5.1.1
 defusedxml==0.7.1
+distro==1.8.0
+distro-info==1.0
+docker==6.0.1
+docker-compose==1.29.2
+dockerpty==0.4.1
 docopt==0.6.2
+exceptiongroup==1.1.0
+feedparser==6.0.10
+func-timeout==4.3.5
+fuse-python==1.0.5
 future==0.18.2
-Glances==3.2.7
-idna==2.6
-lxml==4.9.1
-packaging==21.3
-pip-review==1.2.0
+Glances==3.3.0.4
+gpg==1.10.0
+h11==0.14.0
+hyperlink==21.0.0
+idna==3.4
+importlib-metadata==6.0.0
+incremental==22.10.0
+jsonschema==3.2.0
+louis==3.16.0
+lxml==4.9.2
+Mako==1.2.4
+Markdown==3.4.1
+MarkupSafe==2.1.1
+more-itertools==9.0.0
+musicbrainzngs==0.7.1
+mutagen==1.46.0
+outcome==1.2.0
+packaging==22.0
+paramiko==2.12.0
+pip-autoremove==0.10.0
+pip-review==1.3.0
 pip-search==0.0.12
 pkgconfig==1.5.5
 powerline-status==2.7
-psutil==5.9.2
-pycairo==1.21.0
-pydantic==1.10.2
+psutil==5.9.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.23.0
+pycparser==2.21
+pycups==2.0.1
+pycurl==7.45.2
+pydantic==1.10.4
 pyenchant==3.2.2
-Pygments==2.13.0
+Pygments==2.14.0
+PyGObject==3.42.2
+PyHamcrest==2.0.4
+pyinotify==0.9.6
+pylibacl==0.6.0
+PyNaCl==1.5.0
+pyOpenSSL==23.0.0
 pyparsing==3.0.9
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+pyrsistent==0.19.3
+pysmbc==1.0.23
+PySocks==1.7.1
 pyte==0.8.1
+python-apt==2.2.1
+python-dotenv==0.21.0
 pyvoc==1.4.0
-PyYAML==6.0
+pyxattr==0.8.0
+pyxdg==0.28
+PyYAML==5.4.1
+quodlibet==4.3.0
 requests==2.28.1
-rich==12.5.1
+rich==13.0.0
 schedule==1.1.0
+selenium==4.7.2
+service-identity==21.1.0
+sgmllib3k==1.0.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-termcolor==2.0.1
+termcolor==2.2.0
+texttable==1.6.7
 thefuck==3.32
 toml==0.10.2
+tornado==6.2
 tqdm==4.64.1
-typing_extensions==4.3.0
-urllib3==1.26.12
+trio==0.22.0
+trio-websocket==0.9.2
+Twisted==22.10.0
+typing_extensions==4.4.0
+unattended-upgrades==0.1
+urllib3==1.26.13
+waitress==2.1.2
 wcwidth==0.2.5
+websocket-client==0.59.0
+websockets==10.4
+wsproto==1.2.0
+xdg==5.1.1
 xmltodict==0.13.0
+xvfbwrapper==0.2.9
+zipp==3.11.0
+zope.interface==5.5.2
