--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,15 +98,27 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # shell zsh
 set-option -g default-shell '/bin/zsh'
 
+# Load tmux powerline
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g status-interval 2
+set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
+set -g status-left-length 60
+
 # tmux-powerline
 set-option -g status on
 set-option -g status-interval 2
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
-set-option -g status-right-length 90
+set-option -g status-right-length 60
 set-option -g status-left "#(~/tmux-powerline/powerline.sh left)"
 set-option -g status-right "#(~/tmux-powerline/powerline.sh right)"
 set-hook -g session-created 'run-shell "~/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
+#bind C-[ run '~/tmux-powerline/mute_powerline.sh left'		# Mute left statusbar.
+#bind C-] run '~/tmux-powerline/mute_powerline.sh right'		# Mute right statusbar.
+
+# powerline
+#run-shell '/home/scudzy/.local/bin/powerline-daemon -q'
+#source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
