--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,14 +51,14 @@ set -g window-status-current-style fg=colour222
 set -g pane-border-style fg=colour240
 set -g pane-active-border-style fg=colour243
 
-set -g status-left ''
-set -g status-left-length 0
-set -g status-right ''
-set -g status-right-length 0
+#set -g status-left ''
+#set -g status-left-length 0
+#set -g status-right ''
+#set -g status-right-length 0
 
 # Display a clock on the bottom right of the status bar.
-set -g status-right '%a %Y-%m-%d %H:%M'
-set -g status-right-length 20
+#set -g status-right '%a %Y-%m-%d %H:%M'
+#set -g status-right-length 20
 
 # -----------------------------------------------------------------------------
 # Key bindings
@@ -94,31 +94,54 @@ bind-key -n M-Right select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # shell zsh
 set-option -g default-shell '/bin/zsh'
 
-# Load tmux powerline
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g status-interval 2
-set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
-set -g status-left-length 60
+source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
+
+# tmux-mem-cpu-load
+#set-option -g status-interval 2
+#set-option -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load)#[default]"
+#set-option -g status-left-length 60
+
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-justify centre
+set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-style fg=colour136,bg=colour235
+set-option -g status-left-length 30
+set-option -g status-left-style default
+#set-option -ag status-left "#[fg=blue,bg=default]#H #[fg=black]•"
+set-option -ag status-left "#[fg=cyan,bg=default]#(ip route | awk '/default/ { print $3 }')"
+#set-option -g status-left "#[fg=red] #(curl -s 'wttr.in/Kuantan?format=4')"
+set-option -g status-right-length 140
+set-option -g status-right-style default
+set-option -g status-right "#[fg=green,bg=default]#(tmux-mem-cpu-load)"
+set-option -ag status-right "#[fg=gray,bg=default]Uptime#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
+set-option -ag status-right "#[fg=yellow,bg=default]%a %H:%M #[fg=blue]%d-%m-%Y"
+set-window-option -g window-status-style fg=colour244
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-current-style fg=colour166
+set-window-option -g window-status-current-style bg=default
 
 # tmux-powerline
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 60
-set-option -g status-left "#(~/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/tmux-powerline/powerline.sh right)"
-set-hook -g session-created 'run-shell "~/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
+#set-option -g status on
+#set-option -g status-interval 2
+#set-option -g status-justify "centre"
+#set-option -g status-left-length 60
+#set-option -g status-right-length 90
+#set-option -g status-left "#(~/tmux-powerline/powerline.sh left)"
+#set-option -g status-right "#(~/tmux-powerline/powerline.sh right)"
+#set-hook -g session-created 'run-shell "~/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
 #bind C-[ run '~/tmux-powerline/mute_powerline.sh left'		# Mute left statusbar.
 #bind C-] run '~/tmux-powerline/mute_powerline.sh right'		# Mute right statusbar.
 
 # powerline
 #run-shell '/home/scudzy/.local/bin/powerline-daemon -q'
-#source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
+
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
