:wrench: Customize tmux powerline status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,14 +51,10 @@ set -g window-status-current-style fg=colour222
 set -g pane-border-style fg=colour240
 set -g pane-active-border-style fg=colour243
 
-#set -g status-left ''
-#set -g status-left-length 0
-#set -g status-right ''
-#set -g status-right-length 0
-
-# Display a clock on the bottom right of the status bar.
-#set -g status-right '%a %Y-%m-%d %H:%M'
-#set -g status-right-length 20
+set -g status-left ''
+set -g status-left-length 0
+set -g status-right ''
+set -g status-right-length 0
 
 # -----------------------------------------------------------------------------
 # Key bindings
@@ -99,33 +95,28 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # shell zsh
 set-option -g default-shell '/bin/zsh'
 
-source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
+# Statusbar windows statusbar
+set-window-option -g window-status-style fg=colour244
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-current-style fg=colour166
+set-window-option -g window-status-current-style bg=default
 
-# tmux-mem-cpu-load
-#set-option -g status-interval 2
-#set-option -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load)#[default]"
-#set-option -g status-left-length 60
-
+# Statusbar style left
 set-option -g status on
 set-option -g status-interval 1
 set-option -g status-justify centre
 set-option -g status-keys vi
 set-option -g status-position bottom
 set-option -g status-style fg=colour136,bg=colour235
-set-option -g status-left-length 30
+set-option -g status-left-length 40
+set-option -g status-right-length 160
 set-option -g status-left-style default
-#set-option -ag status-left "#[fg=blue,bg=default]#H #[fg=black]•"
-set-option -ag status-left "#[fg=cyan,bg=default]#(ip route | awk '/default/ { print $3 }')"
-#set-option -g status-left "#[fg=red] #(curl -s 'wttr.in/Kuantan?format=4')"
-set-option -g status-right-length 140
+set-option -ga status-left '#[bg=bright]#(curl "wttr.in/Kuantan?format=3") '
+set-option -ga status-left "#[bg=bright]🖥️ #[fg=cyan,bg=default] #(ip route | awk '/default/ { print $3 }')"
+# Statusbar style right
 set-option -g status-right-style default
-set-option -g status-right "#[fg=green,bg=default]#(tmux-mem-cpu-load)"
-set-option -ag status-right "#[fg=gray,bg=default]Uptime#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
-set-option -ag status-right "#[fg=yellow,bg=default]%a %H:%M #[fg=blue]%d-%m-%Y"
-set-window-option -g window-status-style fg=colour244
-set-window-option -g window-status-style bg=default
-set-window-option -g window-status-current-style fg=colour166
-set-window-option -g window-status-current-style bg=default
+set-option -ga status-right "#[fg=green,bg=default,bright]✳️#[fg=green,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',')"
+set-option -ga status-right " ⌚ #[fg=white]%a %H:%M #[fg=blue]%d-%m-%Y"
 
 # tmux-powerline
 #set-option -g status on
@@ -140,8 +131,8 @@ set-window-option -g window-status-current-style bg=default
 #bind C-] run '~/tmux-powerline/mute_powerline.sh right'		# Mute right statusbar.
 
 # powerline
-#run-shell '/home/scudzy/.local/bin/powerline-daemon -q'
-
+# run-shell '/home/scudzy/.local/bin/powerline-daemon -q'
+source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
