:art: configure tmux powerline status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,44 +95,39 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # shell zsh
 set-option -g default-shell '/bin/zsh'
 
-# Statusbar windows statusbar
-set-window-option -g window-status-style fg=colour244
-set-window-option -g window-status-style bg=default
-set-window-option -g window-status-current-style fg=colour166
-set-window-option -g window-status-current-style bg=default
-
 # Statusbar style left
-set-option -g status on
-set-option -g status-interval 1
-set-option -g status-justify centre
-set-option -g status-keys vi
-set-option -g status-position bottom
-set-option -g status-style fg=colour136,bg=colour235
-set-option -g status-left-length 40
-set-option -g status-right-length 160
-set-option -g status-left-style default
-set-option -ga status-left '#[bg=bright]#(curl "wttr.in/Kuantan?format=3") '
-set-option -ga status-left "#[bg=bright]🖥️ #[fg=cyan,bg=default] #(ip route | awk '/default/ { print $3 }')"
-# Statusbar style right
-set-option -g status-right-style default
-set-option -ga status-right "#[fg=green,bg=default,bright]✳️#[fg=green,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',')"
-set-option -ga status-right " ⌚ #[fg=white]%a %H:%M #[fg=blue]%d-%m-%Y"
+# set-option -g status on
+# set-option -g status-interval 2
+# set-option -g status-justify centre
+# set-option -g status-keys vi
+# set-option -g status-position bottom
+# set-option -g status-style fg=colour136,bg=colour235
+# set-option -g status-left-length 60
+# set-option -g status-right-length 140
+# set-option -g status-left-style default
+# set-option -g status-right-style default
+# set-option -g status-left "#[fg=blue,bg=default]#H #[fg=white]•#[default]"
+# #set -g status-left "#[fg=red,bg=default,bright]#(curl 'wttr.in/Kuantan?format=3') "
+# set-option -g status-left "#[bg=bright]🖥️#[fg=cyan,bg=default]#(ip route | awk '/default/ { print $3 }')#[default]"
+# # Statusbar style right
+# set-option -g status-right "#[fg=green,bg=default,bright]✳️#[fg=green,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #[fg=white]%a %H:%M #[fg=yellow,bg=default]%d-%m-%Y#[default]"
 
-# tmux-powerline
-#set-option -g status on
-#set-option -g status-interval 2
-#set-option -g status-justify "centre"
-#set-option -g status-left-length 60
-#set-option -g status-right-length 90
-#set-option -g status-left "#(~/tmux-powerline/powerline.sh left)"
-#set-option -g status-right "#(~/tmux-powerline/powerline.sh right)"
-#set-hook -g session-created 'run-shell "~/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
-#bind C-[ run '~/tmux-powerline/mute_powerline.sh left'		# Mute left statusbar.
-#bind C-] run '~/tmux-powerline/mute_powerline.sh right'		# Mute right statusbar.
+set -g status on
+set -g status-interval 2
+set -g status-justify centre
+set -g status-keys vi
+set -g status-position bottom
+set -g status-style fg=colour136,bg=colour235
+set -g status-left-length 60
+set -g status-left "#[fg=colour111,bg=black]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2)#[default]"
+set -g status-right-length 140
+set -g status-right "#[fg=colour11]#(ip route | awk '/default/ { print $3 }')#[fg=colour40] #(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #[fg=colour15,bg=black,bold]%a %H:%M#[default] #[fg=colour226]%d-%m-%Y#[default]"
 
-# powerline
-# run-shell '/home/scudzy/.local/bin/powerline-daemon -q'
-source '/home/scudzy/.local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf'
+# Statusbar windows statusbar
+setw -g window-status-style fg=colour244
+setw -g window-status-style bg=default
+setw -g window-status-current-style fg=colour166
+setw -g window-status-current-style bg=default
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
