:art: Lots of improvement

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,12 +88,19 @@ bind-key -n M-Right select-pane -R
 
 # List of plugins.
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'ofirgall/tmux-window-name'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # shell zsh
 set-option -g default-shell '/bin/zsh'
+
+# tmux window name
+set -g @tmux_window_name_shells "['bash', 'fish', 'sh', 'zsh']"
+set -g @tmux_window_dir_programs "['nvim', 'vim', 'vi', 'git']"
+set -g @tmux_window_name_max_name_len "20"
+set -g @tmux_window_name_use_tilde "False"
 
 # Statusbar style left
 # set-option -g status on
@@ -114,14 +121,15 @@ set-option -g default-shell '/bin/zsh'
 
 set -g status on
 set -g status-interval 2
-set -g status-justify centre
+set -g status-justify right
 set -g status-keys vi
 set -g status-position bottom
 set -g status-style fg=colour136,bg=colour235
 set -g status-left-length 60
-set -g status-left "#[fg=colour111,bg=black]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2)#[default]"
-set -g status-right-length 140
-set -g status-right "#[fg=colour11]#(ip route | awk '/default/ { print $3 }')#[fg=colour40] #(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #[fg=colour15,bg=black,bold]%a %H:%M#[default] #[fg=colour226]%d-%m-%Y#[default]"
+set -g status-left '#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+set -g status-right-length 60
+set -g status-right "#[fg=colour15,bg=black,bold] %H:%M#[default] #[fg=colour226]%a %d-%m-%Y#[default]"
+# set -g status-right "#[fg=colour11]#(ip route | awk '/default/ { print $3 }')#[fg=colour40] #(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #[fg=colour15,bg=black,bold]%a %H:%M#[default] #[fg=colour226]%d-%m-%Y#[default]"
 
 # Statusbar windows statusbar
 setw -g window-status-style fg=colour244
@@ -129,5 +137,15 @@ setw -g window-status-style bg=default
 setw -g window-status-current-style fg=colour166
 setw -g window-status-current-style bg=default
 
+# tmux-resurrect
+set -g @resurrect-hook-post-save-all 'eval $(xdotool getwindowgeometry --shell $WINDOWID); echo 0,$X,$Y,$WIDTH,$HEIGHT > $HOME/.tmux/resurrect/geometry'
+set -g @resurrect-hook-pre-restore-all 'wmctrl -i -r $WINDOWID -e $(cat $HOME/.tmux/resurrect/geometry)'
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
+run-shell "~/.tmux/plugins/tmux-window-name/tmux_window_name.tmux"
+run-shell "~/.tmux/plugins/tmux-resurrect/resurrect.tmux"
