--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,9 +93,10 @@ bind-key -n M-Right select-pane -R
 # List of plugins.
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'ofirgall/tmux-window-name'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # shell zsh
 set-option -g default-shell '/bin/zsh'
@@ -171,15 +172,15 @@ set-window-option -g window-status-separator ''
 
 set -g status on
 set -g status-interval 2
-set -g status-justify centre
+set -g status-justify left
 set -g status-keys vi
 set -g status-position bottom
-set -g status-style fg=colour232,bg=colour232
-set -g status-left-length 60
-set -g status-left "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -c -q -v -l 52 -r 16 -i 2)#[default]"
+#set -g status-style fg=colour232,bg=colour232
+#set -g status-left-length 60
+#set -g status-left "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -c -q -v -l 52 -r 16 -i 2)#[default]"
 # set -g status-left "#[fg=blue]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --vertical-graph --colors --powerline-right --interval 2)#[default]"
-set -g status-right-length 40
-set -g status-right "#[fg=colour190]%R #[fg=colour135] #[fg=colour153]%a #[fg=colour135] #[fg=colour190]%d-%m-%Y#[default]"
+#set -g status-right-length 40
+#set -g status-right "#[fg=colour190]#{prefix_highlight} #[fg=colour190]%R #[fg=colour135] #[fg=colour153]%a #[fg=colour135] #[fg=colour190]%d-%m-%Y#[default]"
 # set -g status-right "#[fg=colour11]#(ip route | awk '/default/ { print $3 }')#[fg=colour40] #(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #[fg=colour15,bg=black,bold]%a %H:%M#[default] #[fg=colour226]%d-%m-%Y#[default]"
 
 # # Statusbar windows statusbar
@@ -195,8 +196,12 @@ set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
+#set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
 run-shell "~/.tmux/plugins/tmux-window-name/tmux_window_name.tmux"
 run-shell "~/.tmux/plugins/tmux-resurrect/resurrect.tmux"
+# Ensure the powerline daemon is running
+run-shell "~/.local/bin/powerline-daemon -q"
+source "~/.local/pipx/venvs/powerline-status/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf"
