:wrench: Absolute path to powerline-daemon

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -203,5 +203,5 @@ run -b "~/.tmux/plugins/tpm/tpm"
 run-shell "~/.tmux/plugins/tmux-window-name/tmux_window_name.tmux"
 run-shell "~/.tmux/plugins/tmux-resurrect/resurrect.tmux"
 # Ensure the powerline daemon is running
-run-shell "~/.local/bin/powerline-daemon -q"
+run-shell "/home/scudzy/.local/pipx/venvs/powerline-status/bin/powerline-daemon -q"
 source "~/.local/pipx/venvs/powerline-status/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf"
