:hammer: Modify ruby gem config file

--- a/.gemrc
+++ b/.gemrc
@@ -1,9 +1,11 @@
----
-:backtrace: false
-:bulk_threshold: 1000
-:sources:
-- https://rubygems.org/
-:update_sources: true
-:verbose: true
+# http://docs.rubygems.org/read/chapter/11
+--- 
 gem: "--no-ri --no-rdoc"
 benchmark: false
+:verbose: true
+:update_sources: true
+:sources: 
+- http://gems.rubyforge.org/
+- http://rubygems.org/
+:backtrace: true
+:bulk_threshold: 1000
