--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -200,8 +200,8 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TPM (keep this line at the very bottom of your tmux.conf).
 run -b "~/.tmux/plugins/tpm/tpm"
-run-shell "~/.tmux/plugins/tmux-window-name/tmux_window_name.tmux"
-run-shell "~/.tmux/plugins/tmux-resurrect/resurrect.tmux"
+run-shell "~/.config/tmux/plugins/tmux-window-name/tmux_window_name.tmux"
+run-shell "~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux"
 # Ensure the powerline daemon is running
-run-shell "/home/scudzy/.local/pipx/venvs/powerline-status/bin/powerline-daemon -q"
+#run-shell "/home/scudzy/.local/bin/powerline-daemon -q"
 source "~/.local/pipx/venvs/powerline-status/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf"
