--- a/.config/gh/hosts.yml
+++ b/.config/gh/hosts.yml
@@ -1,4 +1,7 @@
 github.com:
-    oauth_token: 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
     user: scudzy
     git_protocol: https
+    users:
+        scudzy:
+            oauth_token: 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
+    oauth_token: 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
