--- a/.gitconfig
+++ b/.gitconfig
@@ -91,7 +91,7 @@
 	#############
 	c = commit
 	ca = commit -a
-	cm = commit -m
+	cm = commit
 	cam = commit -am
 	cem = commit --allow-empty -m
 	cd = commit --amend
@@ -267,6 +267,7 @@
 	theirs = "!f() { git checkout --theirs $@ && git add $@; }; f"
 	subrepo = !sh -c 'git filter-branch --prune-empty --subdirectory-filter $1 master' -
 	human = name-rev --name-only --refs=refs/heads/*
+	cm = commit
 [http]
 	postbuffer = 524288000
 [credential]
