:wrench: Add path to pinentry-curses

--- a/.local/share/gnupg/gpg-agent.conf
+++ b/.local/share/gnupg/gpg-agent.conf
@@ -4,7 +4,7 @@ default-cache-ttl-ssh 7200
 max-cache-ttl-ssh 14400
 enable-ssh-support
 disable-scdaemon
-#pinentry-program /d/Apps/password-store/pinentry-wsl-ps1.sh
+pinentry-program /usr/bin/pinentry-curses
 debug 1024
 debug-pinentry
 log-file /home/scudzy/.gnupg/gpg-agent.log
